--- a/src/main/resources/assets/wzry/lang/zh_cn.json
+++ b/src/main/resources/assets/wzry/lang/zh_cn.json
@@ -1,4 +1,11 @@
 {
+  "itemGroup.wzry.attack_item_group": "攻击装备",
+
   "item.wzry.wujinzhanren": "无尽战刃",
-  "item.wzry.pojun": "破军"
+  "item.wzry.wujinzhanren.tooltip.properties": "+20%暴击率",
+  "item.wzry.wujinzhanren.tooltip.description": "+40%暴击效果",
+
+  "item.wzry.pojun": "破军",
+  "item.wzry.pojun.tooltip.description": "对生命值低于50%的目标造成额外30%伤害"
+
 }
