[风暴巨剑] joined the game

--- a/src/main/resources/assets/wzry/lang/en_us.json
+++ b/src/main/resources/assets/wzry/lang/en_us.json
@@ -3,6 +3,8 @@
 
   "item.wzry.tiejian": "TieJian",
 
+  "item.wzry.fengbaojujian": "FengBaoJuJian",
+
   "item.wzry.wujinzhanren": "WuJinZhanRen",
   "item.wzry.wujinzhanren.tooltip.properties": "+20% Critical hit rate",
   "item.wzry.wujinzhanren.tooltip.description": "Critical hit effect increased by 40%",
