[吸血之镰] joined the game

--- a/src/main/resources/assets/wzry/lang/en_us.json
+++ b/src/main/resources/assets/wzry/lang/en_us.json
@@ -6,6 +6,9 @@
   "item.wzry.bishou": "BiShou",
   "item.wzry.bishou.tooltip.properties": "+10% attack speed",
 
+  "item.wzry.bojiquantao": "BoJiQuanTao",
+  "item.wzry.bojiquantao.tooltip.properties": "+8% Critical hit rate",
+
 
   "item.wzry.fengbaojujian": "FengBaoJuJian",
 
