--- a/src/main/resources/assets/wzry/lang/zh_cn.json
+++ b/src/main/resources/assets/wzry/lang/zh_cn.json
@@ -6,6 +6,9 @@
   "item.wzry.bishou": "匕首",
   "item.wzry.bishou.tooltip.properties": "+10%攻速",
 
+  "item.wzry.bojiquantao": "搏击拳套",
+  "item.wzry.bojiquantao.tooltip.properties": "+8%暴击率",
+
 
   "item.wzry.fengbaojujian": "风暴巨剑",
 
