--- a/src/main/resources/assets/wzry/lang/en_us.json
+++ b/src/main/resources/assets/wzry/lang/en_us.json
@@ -56,6 +56,7 @@
   "item.wzry.hongmanao.tooltip.properties": "+3 max health",
 
   "item.wzry.bujia": "BuJia",
+  "item.wzry.buhutui": "BuHuTui",
 
   "item.wzry.fanjia": "FanShangCiJia",
   "item.wzry.fanjia.tooltip.description1": "Return 25% of the damage to the attacker",
