--- a/src/main/resources/assets/wzry/lang/zh_cn.json
+++ b/src/main/resources/assets/wzry/lang/zh_cn.json
@@ -56,6 +56,7 @@
   "item.wzry.hongmanao.tooltip.properties": "+3最大生命",
 
   "item.wzry.bujia": "布甲",
+  "item.wzry.buhutui": "布护腿",
 
   "item.wzry.fanjia": "反伤刺甲",
   "item.wzry.fanjia.tooltip.description1": "将受到伤害的25%回敬给攻击者",
