[布头盔] joined the game

--- a/src/main/resources/assets/wzry/lang/en_us.json
+++ b/src/main/resources/assets/wzry/lang/en_us.json
@@ -57,6 +57,7 @@
 
   "item.wzry.bujia": "BuJia",
   "item.wzry.buhutui": "BuHuTui",
+  "item.wzry.butoukui": "BuTouKui",
 
   "item.wzry.fanjia": "FanShangCiJia",
   "item.wzry.fanjia.tooltip.description1": "Return 25% of the damage to the attacker",
