--- a/src/main/resources/assets/wzry/lang/zh_cn.json
+++ b/src/main/resources/assets/wzry/lang/zh_cn.json
@@ -57,6 +57,7 @@
 
   "item.wzry.bujia": "布甲",
   "item.wzry.buhutui": "布护腿",
+  "item.wzry.butoukui": "布头盔",
 
   "item.wzry.fanjia": "反伤刺甲",
   "item.wzry.fanjia.tooltip.description1": "将受到伤害的25%回敬给攻击者",
