[布靴] joined the game

--- a/src/main/resources/assets/wzry/lang/en_us.json
+++ b/src/main/resources/assets/wzry/lang/en_us.json
@@ -58,6 +58,7 @@
   "item.wzry.bujia": "BuJia",
   "item.wzry.buhutui": "BuHuTui",
   "item.wzry.butoukui": "BuTouKui",
+  "item.wzry.buxue": "BuXue",
 
   "item.wzry.liliangyaodai": "LiLiangYaoDai",
   "item.wzry.liliangyaodai.tooltip.properties": "+10 max health",
