--- a/src/main/resources/assets/wzry/lang/zh_cn.json
+++ b/src/main/resources/assets/wzry/lang/zh_cn.json
@@ -58,6 +58,7 @@
   "item.wzry.bujia": "布甲",
   "item.wzry.buhutui": "布护腿",
   "item.wzry.butoukui": "布头盔",
+  "item.wzry.buxue": "布靴",
 
   "item.wzry.liliangyaodai": "力量腰带",
   "item.wzry.liliangyaodai.tooltip.properties": "+10最大生命",
