[抵抗之靴] joined the game

--- a/src/main/resources/assets/wzry/lang/en_us.json
+++ b/src/main/resources/assets/wzry/lang/en_us.json
@@ -60,6 +60,9 @@
   "item.wzry.butoukui": "BuTouKui",
   "item.wzry.buxue": "BuXue",
 
+  "item.wzry.dikangzhixue": "DiKangZhiXUe",
+  "item.wzry.dikangzhixue.tooltip.description": "-35% controlled duration",
+
   "item.wzry.liliangyaodai": "LiLiangYaoDai",
   "item.wzry.liliangyaodai.tooltip.properties": "+10 max health",
 
