--- a/src/main/resources/assets/wzry/lang/zh_cn.json
+++ b/src/main/resources/assets/wzry/lang/zh_cn.json
@@ -63,11 +63,22 @@
   "item.wzry.dikangzhixue": "抵抗之靴",
   "item.wzry.dikangzhixue.tooltip.description": "-35%受控时长",
 
+  "item.wzry.baolizhixue": "暴戾",
+
   "item.wzry.liliangyaodai": "力量腰带",
   "item.wzry.liliangyaodai.tooltip.properties": "+10最大生命",
 
   "item.wzry.fanjia": "反伤刺甲",
   "item.wzry.fanjia.tooltip.description1": "将受到伤害的25%回敬给攻击者",
-  "item.wzry.fanjia.tooltip.description2": "如果一次伤害大于最大生命值20%，则会对攻击者造成最大生命值10%的伤害"
+  "item.wzry.fanjia.tooltip.description2": "如果一次伤害大于最大生命值20%，则会对攻击者造成最大生命值10%的伤害",
+
+
+
+
+
+
+
+
+  "effect.wzry.dizziness": "眩晕"
 
 }
