--- a/src/main/resources/assets/wzry/lang/en_us.json
+++ b/src/main/resources/assets/wzry/lang/en_us.json
@@ -71,6 +71,9 @@
   "item.wzry.liliangyaodai": "LiLiangYaoDai",
   "item.wzry.liliangyaodai.tooltip.properties": "+10 max health",
 
+  "item.wzry.shouhuzhezhikai": "ShouHuZheZhiKai",
+  "item.wzry.shouhuzhezhikai.tooltip.description": "Reduce the attacker's attack speed by 10% after being attacked for 4s",
+
   "item.wzry.fanjia": "FanShangCiJia",
   "item.wzry.fanjia.tooltip.description1": "Return 25% of the damage to the attacker",
   "item.wzry.fanjia.tooltip.description2": "Return damage of 10% maxHP to the attacker if one damage is greater than 20% maxHP",
